--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 <h2>Riding the Crest: Secrets of the Rockstar Programmers</h2>
 
 <div id="description">
-<p><img src="cover.jpg" alt="" /> With the rise of blogging, many of the world’s most talented programmers have become celebrities in the field of IT.  These "rock star programmers" are bellwether icons for their legions of readers: IT professionals trying to stay current. </p>
+<p><img src="cover.jpg" alt="" /> With the rise of blogging, many of the world&#8217;s most talented programmers have become celebrities in the field of IT.  These &#8220;rock star programmers&#8221; are bellwether icons for their legions of readers: IT professionals trying to stay current. </p>
 </div>
 
 
-<p><strong>SECRETS OF THE ROCK STAR PROGRAMMERS: Riding the IT Crest</strong> (McGraw-Hill; March 2008; Original paperback: $24.99) by Ed Burns is a unique collection of incisive interviews with A-list programmers centering on the themes of "spotting trends," "staying current," "how to avoid becoming obsolete," and "work/life balance."</p>
-<p>Ed Burns spoke with some of today’s best programmers and gained access to their thoughts and insights. They are software technology, software pedagogy, and software development experts, as well as one actual rock star, the programmer’s rock star, and a personal favorite of Ed’s, Weird Al Yankovic. Each programmer interviewed is asked a common set of questions, and responses can be easily found in a "by-question" index.</p> 
+<p><strong>SECRETS OF THE ROCK STAR PROGRAMMERS: Riding the IT Crest</strong> (McGraw-Hill; March 2008; Original paperback: $24.99) by Ed Burns is a unique collection of incisive interviews with A-list programmers centering on the themes of &#8220;spotting trends,&#8221; &#8220;staying current,&#8221; &#8220;how to avoid becoming obsolete,&#8221; and &#8220;work/life balance.&#8221;</p>
+<p>Ed Burns spoke with some of today&#8217;s best programmers and gained access to their thoughts and insights. They are software technology, software pedagogy, and software development experts, as well as one actual rock star, the programmer&#8217;s rock star, and a personal favorite of Ed&#8217;s, Weird Al Yankovic. Each programmer interviewed is asked a common set of questions, and responses can be easily found in a &#8220;by-question&#8221; index.</p> 
 <p>Programmers interviewed include James Gosling, the father of Java; Max Levchin, co-founder of PayPal; Chris Wilson, Lead Architect of Microsoft Internet Explorer; Hani Suleiman, of <em>The Bile Blog;</em> and Rod Johnson, inventor of the Spring Framework.</p>
 <p><em>Secrets of the Rock Star Programmers</em> is a valuable career-enrichment resource for millions of software developers and their managers. Readers will learn from the best in the world how to spot the next big thing in programming and leverage it to their advantage.</p>
 
