--- a/press.html
+++ b/press.html
@@ -25,6 +25,7 @@
 
 <ul class="nav">
 <li><a href="index.html">Home</a></li>
+<li><a href="blog">Blog</a></li>
 <li><a href="author.html">The Author</a></li>
 <li><a href="theshow.html">The Show</a></li>
 <li><a href="interviews.html">The Rock Stars</a></li>
