modified:   author.html 	modified:   author.jpg 	modified:   edburns/index.html 	modified:   index.html 	modified:   interviews.html
Stale link purge.

--- a/edburns/index.html
+++ b/edburns/index.html
@@ -7,9 +7,9 @@
   </head>
 
   <body>
-    <h1>Ed Burns <a href="../author.jpg"><img width="164" height="109" src="../author.jpg" alt="Headshot of Ed Burns" /></a></h1>
+    <h1>Ed Burns <a href="../author.jpg"><img width="109" src="../author.jpg" alt="Headshot of Ed Burns" /></a></h1>
 
-<p>Photograph copyright 2011 <a href="http://www.doag.org/">DOAG</a> and
+<p>Photograph copyright 2013 <a href="http://www.doag.org/">DOAG</a> and
 <a href="http://www.anneeilers.com/">Ann Eilers</a>.</p>
 
 <div id="twitter_div">
