--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
 <p>Programmers interviewed include James Gosling, the father of Java; Max Levchin, co-founder of PayPal; Chris Wilson, Lead Architect of Microsoft Internet Explorer; Hani Suleiman, of <em>The Bile Blog;</em> and Rod Johnson, inventor of the Spring Framework.</p>
 <p><em>Secrets of the Rock Star Programmers</em> is a valuable career-enrichment resource for millions of software developers and their managers. Readers will learn from the best in the world how to spot the next big thing in programming and leverage it to their advantage.</p>
 
-<p>Read <a href="http://74.125.47.132/search?q=cache:Q7azySesQkEJ:www.computerworld.com/action/article.do%3Fcommand%3DviewArticleBasic%26articleId%3D9064240+rock+star+rod+johnson&hl=en&ct=clnk&cd=1&gl=us&client=firefox-a">Chapter One: Rod Johnson</a> at Computerworld (courtesy of Google's cache).</a></p>
-
-<p>Read <a href="http://www.itworld.com/andy-hunt-rockstar-programmer-1-080401">Chapter 11: Andy Hunt</a>, at ITWorld.</p>
+<p>Read <a href="http://www.itworld.com/article/2813501/careers/andy-hunt--secrets-of-a-rock-star-programmer--part-1-.html">Chapter 11: Andy Hunt</a>, at ITWorld.</p>
 
 
 
