--- a/interviews.html
+++ b/interviews.html
@@ -73,7 +73,7 @@
 <td>Rod Johnson
 </td>
 
-<td><a href="http://www.springone2gx.com/conference/speaker/rod_johnson">Biography</a>
+<td><a href="https://nofluffjuststuff.com/conference/speaker/rod_johnson">Biography</a>
 </td>
 
 <td>Creator of Spring Framework, the guy who brought<br />
@@ -105,7 +105,7 @@ Inversion of Control into the mainstream
 
 </td>
 
-<td><a href="http://blogs.msdn.com/cwilso/about.aspx">Blog</a>
+<td><a href="https://cwilso.com/">Blog</a>
 </td>
 
 <td>Co-author of NCSA Mosaic for Windows and Chief Architect for
@@ -164,7 +164,7 @@ Microsoft Internet Explorer
 <td>James Gosling
 </td>
 
-<td><a href="http://blogs.sun.com/jag/">Blog</a>
+<td><a href="http://nighthacks.com/jag/bio/">Blog</a>
 
 </td>
 
