--- a/author.html
+++ b/author.html
@@ -41,37 +41,37 @@
 </div><!--navigation-->
 <div id="main">
 
-<p><a href="author.jpg"><img width="164" height="109" src="author.jpg"
-alt="Headshot of Ed Burns" /></a> Ed Burns is currently a consulting
-member of the technical staff at Oracle America Inc., where he leads a
-team of Web experts from across the industry in developing JavaServer
-Faces Technology through the Java Community Process and in open
-source. He is the author of four books for McGraw-Hill: Secrets of the
-Rock Star Programmers (2008), JavaServer Faces: The Complete Reference
-(co-authored with Chris Schalk, 2006), JavaServer Faces 2.0: The
-Complete Reference (co-authored with Chris Schalk and Neil Griffin,
-2009), and Hudson Continuous Integration in Practice (co-authored with
-Winston Prakash, 2013).</p>
+  <p><a href="author.jpg">
+      <img width="109" alt="Ed Burns headshot"
+           src="author.jpg" alt="Headshot of Ed Burns" /></a>
 
-<p>Before working on JavaServer Faces, Ed worked on a wide variety of
-client and server-side Web technologies since 1994, including NCSA
-Mosaic for X, Mozilla, the Sun Java Plug-in, Jakarta Tomcat, the Cosmo
-Create HTML authoring tool, and the Web transport layer in the Irix
-operating system from Silicon Graphics.</p> 
+<p>Ed Burns is a Consulting Member of the Technical Staff at Oracle
+America, Inc. and has worked on a wide variety of client and server side
+web technologies since 1994, including NCSA Mosaic, Mozilla, the Sun
+Java Plugin, Jakarta Tomcat and, most extensively, JavaServer Faces, on
+which he is the co-spec lead.  Ed is also the co-spec lead for the
+Servlet specification.  Ed is an experienced international conference
+speaker, with consistently high attendence numbers and ratings at
+JavaOne (Rockstar award winner 2016), Devoxx, DevNexus, JAOO, JAX,
+W-JAX, No Fluff Just Stuff, JA-SIG, The Ajax Experience, and Java and
+Linux User Groups.  He has published four books with McGraw-Hill,
+JavaServerFaces: The Complete Reference (2006), Secrets of the Rockstar
+Programmers: Riding the IT crest (2008) JavaServer Faces 2.0: The
+Complete Reference (2010) and Hudson Continuous Integration In Practice
+(2013).</p>
 
 <p>Ed is a frequent speaker at international industry conferences,
 having presented many times at Oracle's JavaOne conference, given
 keynote addresses at the W-JAX and JAX conferences in Germany, the
-Globalcode Developer’s Conference in Sao Paulo, Brazil, the JSF Days and
+Globalcode Developer's Conference in Sao Paulo, Brazil, the JSF Days and
 CONFESS Conferences in Vienna, Austria, the DOAG Conference in
 Nuremberg, Germany, and also has spoken at numerous Java User Group
 meetings and the No Fluff Just Stuff Java Symposium.  Further
 information and blogs may be found at <a
 href="http://purl.oclc.org/NET/edburns/">http://purl.oclc.org/NET/edburns/</a>.
-Read his blog <a
-href="https://weblogs.java.net/blogs/edburns">here</a>.</p>
+Read his blog <a href="blog/">here</a>.</p>
 
-<p>Photograph copyright 2011 <a href="http://www.doag.org/">DOAG</a> and
+<p>Photograph copyright 2013 <a href="http://www.doag.org/">DOAG</a> and
 <a href="http://www.anneeilers.com/">Ann Eilers</a>.</p>
 
 
