--- a/edburns/resume/index.html
+++ b/edburns/resume/index.html
@@ -10,7 +10,17 @@ href="../basic.css" rel=stylesheet title=basic
 type=text/css></LINK>
 <META content="MSHTML 5.00.2920.0" name=GENERATOR>
     <link rel="shortcut icon" href="../favicon.ico" ></link>
-</HEAD>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-92196982-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+  </HEAD>
 <BODY bgColor=#ffffff>
 <P>
 <H1>Edward J. Burns</H1>
