modified:   calendar.html
Continue stale link cleanup.

--- a/calendar.html
+++ b/calendar.html
@@ -61,15 +61,13 @@
 <p>June 17, 2008 - Live radio interview with the author.</p>
 -->
 
-<h3>German Oracle User&#8217;s Group Conference, Nuremberg</h3>
+<h3>DevNexus, Atlanta U.S.A.</h3>
 
-<p>16 - 18 November 2010, I'll be presenting two sessions at <a
-href="http://mydoag.doag.org/konferenz/konferenzplan.php?tag=2">DOAG 2010</a> in
-Nuremberg, Germany: Keynote: Oracle's Runtimes and Frameworks: A Roadmap for Developer Productivity, JSF2.</p>
+<p>Ed is presenting Java EE 8 at the largest developer event in the US southeast.  See &lt;<a href="http://devnexus.com/">http://devnexus.com/</a>&gt;</p>
 
-<h3>The Edge, Tel Aviv, Israel</h3>
+<h3>JavaLand, Br&uuml;hl Germany</h3>
 
-<p>16 December 2010, I'll be presenting a keynote at <a href="http://javaedge.com/jedge/speakers.jsp">The Edge Conference</a> in this ancient and holy land.</p>
+<p>Ed and <a href="http://source-knights.com/">Oliver Szymanski</a> are presenting a class on Java Microservices at <a href="http://javaland.eu/">JavaLand</a>.</p>
 
 
 <h3>Previous Events</h3>
