Complete depth 1 link cleanup.
modified:   edburns/resume/address.html
modified:   otherContent.html
modified:   press.html
modified:   purchase.html

- Refresh links.

--- a/press.html
+++ b/press.html
@@ -49,17 +49,14 @@
 
 <div id="main">
 
-<h2>Press</h2>
+  <h2>Press</h2>
 
-<h3>Excerpt</h3>
-
-<p>Read <a href="http://www.computerworld.com/action/article.do?command=viewArticleBasic&articleId=9064240">Chapter One: Rod Johnson</a> on Computerworld.</a>
-
-<h3>Interviews</h3>
-
-<p>Listen to a podcast interview with <a href="http://javaposse.com/index.php?post_id=319199">The Java Posse</a>.</p>
+<p><a href="https://www.amazon.com/Ed-Burns/e/B001ILO9Y8">Amazon Author Page</a></p>
 
 <h3>Reviews</h3>
+
+<p><a href="https://www.amazon.com/Secrets-Rock-Star-Programmers-Riding/dp/0071490833/ref=asap_bc?ie=UTF8#customerReviews">Amazon Reviews</a></p>
+
 
 </div><!--main-->
 
