--- a/purchase.html
+++ b/purchase.html
@@ -51,17 +51,16 @@
 
 <h2>Buy the Book</h2>
 
-<p>Preferred Seller: Amazon.com</p>
+<p>Preferred Seller: <a href="https://www.amazon.com/gp/product/B010BCOFHA/ref=as_li_tl?ie=UTF8&tag=edburns-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B010BCOFHA&linkId=549cd36f6e65a07790a19e9f8ccce170">Amazon.com</a></p>
 
-<p><iframe src="http://rcm.amazon.com/e/cm?t=ridthecre-20&o=1&p=8&l=as1&asins=0071490833&fc1=000000&IS2=1&lt1=_blank&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe></p>
+<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=edburns-20&marketplace=amazon&region=US&placement=B010BCOFHA&asins=B010BCOFHA&linkId=c4dbe2056cd84a63e877105c61a47afa&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+    </iframe>
 
 <ul>
 
-<li><a href="http://www.powells.com/partner/33088/biblio/978-0071490832">Buy from Powell's</a></li>
+<li><a href="http://www.powells.com/book/secrets-of-the-rockstar-programmers-9780071490832/62-1">Buy from Powell's</a></li>
 
 <li><a href="http://search.barnesandnoble.com/Secrets-of-the-Rockstar-Programmers/Ed-Burns/e/9780071490832/?itm=1&afsrc=1&lkid=J24677306&pubid=K161993&byo=1">Buy from Barnes &#38; Noble</a></li>
-
-<li><a href="http://www.zavvi.co.uk/books-10+to+14.99-Computing-Secrets-of-the-Rockstar-Programmers-Ed-Burns/9780071490832/cr33c.r10.1/p.jsf">Buy from Zavvi (UK)</a></li>
 
 </ul>
 
