--- a/otherContent.html
+++ b/otherContent.html
@@ -52,30 +52,14 @@
 
 <div id="main">
 
-<h2>JavaServer Faces: The Complete Reference (with Chris Schalk and
-James Holmes)</h2>
+  <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=edburns-20&marketplace=amazon&region=US&placement=0071625097&asins=0071625097&linkId=7d930129bd421580547ded8e24d57771&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+  </iframe>
+&nbsp;
+<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=edburns-20&marketplace=amazon&region=US&placement=0071804285&asins=0071804285&linkId=3be9f8d0489a118733934edcfba5818f&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+    </iframe>  
 
-<div style="float: left;">
 
-<iframe style="width:120px; height:240px; margin-right: 2em"
-src="http://rcm.amazon.com/e/cm?t=ridthecre-20&o=1&p=8&l=as1&asins=0072262400&fc1=000000&IS2=1&lt1=_blank&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" scrolling="no" frameborder="0"></iframe>
 
-<br />
-<p><a href="http://search.barnesandnoble.com/JavaServer-Faces/Chris-Schalk/e/9780072262407/?itm=1&afsrc=1&lkid=J24677353&pubid=K161993&byo=1">Buy from Barnes &#38; Noble</a></p>
-
-</div>
-
-<div id="description">
-
-<p> Deliver feature-rich,
-cross-browser Internet applications using JavaServer Faces (JSF) and
-this one-stop guide. Written by experts directly involved in developing
-this important technology, JavaServer Faces: The Complete Reference
-fully explains every aspect of JSF.</p>
-</div>
-
-<p>The official site for this book is <a
-href="http://jsfcompref.com">http://jsfcompref.com/</a>.</p>
 
 </div><!--main-->
 
