Capitulate and sell on ebay

--- a/purchase.html
+++ b/purchase.html
@@ -51,10 +51,7 @@
 
 <h2>Buy the Book</h2>
 
-<p>Preferred Seller: <a href="https://www.amazon.com/gp/product/B010BCOFHA/ref=as_li_tl?ie=UTF8&tag=edburns-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B010BCOFHA&linkId=549cd36f6e65a07790a19e9f8ccce170">Amazon.com</a></p>
-
-<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=edburns-20&marketplace=amazon&region=US&placement=B010BCOFHA&asins=B010BCOFHA&linkId=c4dbe2056cd84a63e877105c61a47afa&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
-    </iframe>
+<p>Preferred Seller: <a href="http://www.ebay.com/itm/-/152529035459">Ebay.com</a> (Signed by the author on request)</p>
 
 <ul>
 
