index.html for eclipse

--- a/scratch/20170821-eclipse-charleston-sc/video.html
+++ b/scratch/20170821-eclipse-charleston-sc/video.html
@@ -4,7 +4,7 @@
     <meta http-equiv="refresh" content="0;URL='https://youtu.be/8Ya_jG5gvSk'" />    
   </head>    
   <body> 
-    <p>This page has moved to a <a href="https://youtu.be/8Ya_jG5gvSk">
+    <p>This page has moved to <a href="https://youtu.be/8Ya_jG5gvSk">
       youtube</a>.</p> 
   </body>  
 </html>    
