Amazon works now

--- a/purchase.html
+++ b/purchase.html
@@ -55,6 +55,8 @@
 
 <ul>
 
+<li><a href="https://www.amazon.com/Secrets-Rock-Star-Programmers-Riding/dp/0071490833/ref=sr_1_1?ie=UTF8&qid=1504712727&sr=8-1&keywords=secrets+of+the+rock+star+programmers">Buy from Amazon</a></li>
+
 <li><a href="http://www.powells.com/book/secrets-of-the-rockstar-programmers-9780071490832/62-1">Buy from Powell's</a></li>
 
 <li><a href="http://search.barnesandnoble.com/Secrets-of-the-Rockstar-Programmers/Ed-Burns/e/9780071490832/?itm=1&afsrc=1&lkid=J24677306&pubid=K161993&byo=1">Buy from Barnes &#38; Noble</a></li>
