--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -16,7 +16,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-<th>&nbsp;
+<th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </th>
 
 <th>Conference</th> 
@@ -26,6 +26,73 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 <th>Date</th>
 
 <th>Topic(s)</th>
+
+</tr>
+
+<tr>
+
+<th rowspan="5"><span class="verticaltext">2017</span></th>
+
+<td>JavaOne</td> 
+
+<td>San Francisco, U.S.A.</td>
+
+<td>October
+</td>
+
+<td><a href="https://static.rainfocus.com/oracle/oow17/sess/1492617953914001F4UR/PF/20170417-BURNS_RIEM-JSF_2_3_1507569232494001mIoX.pptx">Contemporary Java Web Applications with JSF 2.3</a>, <a href="https://static.rainfocus.com/oracle/oow17/sess/1493045105258001bjql/PF/CON3920_RAJA_BURNS_STATE_1507245393388001kyYY.pptx">Building a Serverless State Service for the Cloud with Java 9</a>, <a href="https://static.rainfocus.com/oracle/oow17/sess/14926176957820013hZT/PF/CON2022-BURNS_CHAN-SERVLET_4_0_1507569174576001JX2B.pptx">Servlet 4.0: A New Twist on an Old Favorite</a>, <a href="https://static.rainfocus.com/oracle/oow17/sess/1504978192376001CTLb/PF/20171003-javaone-lightning-theremin_1507731853795001sVbN.pptx">Java Your Next Theremin</a></td>
+
+</tr>
+
+<tr>
+
+<td>Goto</td> 
+
+<td>Chicago, U.S.A.</td>
+
+<td>May
+</td>
+
+<td><a href="https://gotochgo.com/2017/sessions/224">Secrets of the Above Average Programmers</a></td>
+
+</tr>
+
+<tr>
+
+<td>GOTO Nights</td> 
+
+<td>Chicago, U.S.A.</td>
+
+<td>April
+</td>
+
+<td><a href="https://www.meetup.com/ChicagoJUG/events/238213369/">Tradeoffs Between Cloud Immigrant and Cloud Native Application Platforms for Java Developers</a></td>
+
+</tr>
+
+<tr>
+
+<td>JavaLand</td> 
+
+<td>Br&uuml;hl, Germany</td>
+
+<td>March
+</td>
+
+<td><a href="https://programm.javaland.eu/2017/talk.html#talk?talkId=531229">Full Stack Java Microservices with Marathon, Docker and HTML5</a></td>
+
+</tr>
+
+<tr>
+
+<td>Devnexus</td> 
+
+<td>Atlanta, U.S.A.</td>
+
+<td>February
+</td>
+
+<td><a href="http://devnexus.com/archive/speakers/2217.html">Something to do with HTTP: Servlet, JAX-RS and JSF in Java EE 8</a></td>
 
 </tr>
 
