--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -40,7 +40,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 <td>October
 </td>
 
-<td><a href="https://static.rainfocus.com/oracle/oow17/sess/1492617953914001F4UR/PF/20170417-BURNS_RIEM-JSF_2_3_1507569232494001mIoX.pptx">Contemporary Java Web Applications with JSF 2.3</a>, <a href="https://static.rainfocus.com/oracle/oow17/sess/1493045105258001bjql/PF/CON3920_RAJA_BURNS_STATE_1507245393388001kyYY.pptx">Building a Serverless State Service for the Cloud with Java 9</a>, <a href="https://static.rainfocus.com/oracle/oow17/sess/14926176957820013hZT/PF/CON2022-BURNS_CHAN-SERVLET_4_0_1507569174576001JX2B.pptx">Servlet 4.0: A New Twist on an Old Favorite</a>, <a href="https://static.rainfocus.com/oracle/oow17/sess/1504978192376001CTLb/PF/20171003-javaone-lightning-theremin_1507731853795001sVbN.pptx">Java Your Next Theremin</a></td>
+<td>Contemporary Java Web Applications with JSF 2.3 (<a href="https://static.rainfocus.com/oracle/oow17/sess/1492617953914001F4UR/PF/20170417-BURNS_RIEM-JSF_2_3_1507569232494001mIoX.pptx">slides</a>, <a href="https://www.youtube.com/watch?v=yshXLB_HdhU">video</a>), <a href="https://static.rainfocus.com/oracle/oow17/sess/1493045105258001bjql/PF/CON3920_RAJA_BURNS_STATE_1507245393388001kyYY.pptx">Building a Serverless State Service for the Cloud with Java 9</a>, Servlet 4.0: A New Twist on an Old Favorite (<a href="https://static.rainfocus.com/oracle/oow17/sess/14926176957820013hZT/PF/CON2022-BURNS_CHAN-SERVLET_4_0_1507569174576001JX2B.pptx">slides</a> <a href="https://www.youtube.com/watch?v=k4tSKHH63fE">video</a>), <a href="https://static.rainfocus.com/oracle/oow17/sess/1504978192376001CTLb/PF/20171003-javaone-lightning-theremin_1507731853795001sVbN.pptx">Java Your Next Theremin</a></td>
 
 </tr>
 
