add code europe

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,20 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-<th rowspan="7"><span class="verticaltext">2017</span></th>
+<th rowspan="8"><span class="verticaltext">2017</span></th>
+
+<td><a href="https://www.codeeurope.pl/en/speakers/edward-burns">Code Europe</a></td> 
+
+<td>Krakow and Warsaw, Poland</td>
+
+<td>December
+</td>
+
+<td><a href="">Secrets of the Above Average Programmers</a>, <a href="">Building a Serverless State Service for the Cloud</a></td>
+
+</tr>
+
+<tr>
 
 <td>Bruno Video</td> 
 
