--- a/edburns/resume/devrel.html
+++ b/edburns/resume/devrel.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- saved from url=(0047)http://java.sun.com/people/edburns/edburns.html -->
-<HTML><HEAD><TITLE>The Resum&eacute; of Edward Burns</TITLE>
+<HTML><HEAD><TITLE>The Resumé of Edward Burns</TITLE>
 <META content="text/html; charset=windows-1252" http-equiv=Content-Type><!-- SGI_COMMENT COSMOCREATE --><!-- SGI_COMMENT VERSION NUMBER="1.0.1a1" --><LINK 
-                                                                                                                                                       href="/edburns/co-op.1/" rel=precedes NAME="Co-op Report One"><LINK 
+href="/edburns/co-op.1/" rel=precedes NAME="Co-op Report One"><LINK 
 href="/edburns/co-op.4/" rel=precedes NAME="Co-op Report Four"><LINK 
 href="/edburns/co-op.5/" rel=precedes NAME="Co-op Report Five"><LINK href="" 
 rel=precedes NAME="Ed Burns"><LINK href="mailto:edburns@acm.org" rev=made><LINK 
@@ -38,74 +38,33 @@ information</A></ADDRESS>
 organization dedicated to producing world-class software through efficient 
 application of software engineering practices.<BR></P>
 <H3><STRONG>EXPERIENCE</STRONG></H3>
-
-<p>I have developed my career with proven distinctions in three related
-core competencies: <a href="developer.html">software
-development</a>, <a href="tech-writer.html">technical writing</a>, and
-<a href="devrel.html">training/developer relations</a>.</p>
-
-<h4><a name="developer">Software Development</a></h4>
-
-<P>Oracle America, Inc.: </p> 
+<P>Sun Microsystems: </p> 
 <UL>
 
-<p>2017-09 &mdash; present, <I>Consulting Member of the Technical Staff</I>, Santa Clara, CA </p>
-
-<p>Cloud Collections State Service</p>
-
-<li>Team member working on upcoming addition to Oracle's public cloud:
-tentatively called Cloud Collections State Service.  This technology
-brings the power of Oracle Coherence to the Oracle public cloud.  Cloud
-Collections is delivered as Kubernetes-orchestrated Docker containers
-and has gRPC enabled language bindings for Go, Java, JavaScript, Python
-  and Swift.</li>
-
-<li>On the Cloud Collections team, I work in development on the Java,
-JavaScript, and Go clients and also as a technical writer.</li>
-
-<p>Jakarta EE</p>
-
-<li>Help to transition JavaServer Faces (JSF) to the Eclipse Foundation
-  for continued evolution by the community.</li>
-
-<li>Mentor Beijing team responsible for continued maintenance of
-Oracle's JSF implementation before and after transition to Eclipse.</li>
-  
-
-<p>2010-08 &mdash; 2017-08, <I>Consulting Member of the Technical Staff</I>, Santa Clara, CA </p>
-
-<p>Java EE 8</p>
-
-<li>Co-Specification Lead for Java Servlet 4.0 Specification</li>
-
-<li>Co-Specification Lead for JSF 2.3 Specification</li>
-
-<p>Java EE 7</p>
-
-<li>Co-Specification Lead for JSF 2.2 Specification</li>
-
-</UL>
-
-<P>Sun Microsystems, Inc.: </p> 
-<UL>
-
-<p>2002-10 &mdash; 2010-07, <I>Senior Staff Engineer</I>, Santa Clara, CA </p>
+<p>10/02 - present, <I>Senior Staff Engineer</I>, Santa Clara, CA </p>
 
   <li>Help lead a team of industry experts from leading companies such
   as IBM, BEA, Sun, and Oracle in developing the specification for <a
-  href="http://www.jcp.org/jsr/detail/252.jsp">JSF</a>.</li>
+  href="http://www.jcp.org/jsr/detail/252.jsp">JavaServer
+  Faces</a> (JSF).</li>
 
-  <li>Pioneered patented techniques for using JSF and AJAX together.</li>
+  <li>Pioneered techniques for using JSF and AJAX together.</li>
 
-<p>2001-09 &mdash; 2002-09, <I>Staff Engineer</I>, Santa Clara, CA </p>
+  <li>Co-author of upcoming book <i><a
+  href="http://purl.oclc.org/NET/jsfbook/">JavaServer Faces: The
+  Complete Reference</a></i>.</li>
+
+  <li>Frequent <a href="http://weblogs.java.net/blog/edburns/">Java.Net Blogger</a></li>
+
+<p>09/01 - 05/04, <I>Staff Engineer</I>, Santa Clara, CA </p>
 
   <LI>Team leader for <A
-  href="http://java.sun.com/javaee/javaserverfaces/">JSF web
+  href="http://java.sun.com/javaee/javaserverfaces/">JavaServer Faces web
   application framework</A> since early days of project. Leveraged
   extreme programming concepts to lead a three person team in tackling
   an ambitious, highly visible, project on an aggressive schedule.
 
-<p>1997-01 &mdash; 2001-08,  <I>Staff Engineer</I>, Santa Clara, CA</p>
+<p>1/97 - 8/01,  <I>Staff Engineer</I>, Santa Clara, CA</p>
 
   <LI>Lead engineer for <A href="http://www.mozilla.org/oji/">Java 
   integration</A> in the Netscape 6 web browser. Netscape 6 is several million 
@@ -122,7 +81,7 @@ Oracle's JSF implementation before and after transition to Eclipse.</li>
   provide a web front end. 
   <LI>Lead engineer for front end of 100% Pure Java multi-dimensional 
   spreadsheet application. </LI></UL>
-<P>Silicon Graphics: 1995-06 &mdash; 1997-01, <I>Core Engineer for Web Authoring Tool</I>, 
+<P>Silicon Graphics: 6/95-1/97, <I>Core Engineer for Web Authoring Tool</I>, 
 Mountain View, CA 
 <UL>
   <LI>Collaborated on a self-started two person team to design, implement and 
@@ -133,7 +92,7 @@ Mountain View, CA
   href="http://www.sgi.com/software/cosmo/create.html">CosmoCreate</A> to enable 
   viewing and authoring pages over the web. This provided experience in 
   extending legacy code well past initial requirements. </LI></UL>National Center 
-for Supercomputing Applications: 1994-08 &mdash; 1995-06, <I>Developer for Mosaic for X</I>, 
+for Supercomputing Applications: 8/94-6/95, <I>Developer for Mosaic for X</I>, 
 Champaign, IL 
 <UL>
   <LI>Implemented enabling features for browsing and posting to the Common 
@@ -145,89 +104,20 @@ Champaign, IL
   <LI>Conceived and implemented <A 
   href="http://archive.ncsa.uiuc.edu/SDG/Software/XMosaic/CCI/webcast.html">WebCast</A>, 
   a collaborative muticast (MBONE) program that enables sharing of web pages 
-  between Mosaic's all over the world using the CCI and the reliable Multicast 
-  Protocol (RMP) library. </LI></UL>International Business Machines: 1992-01 &mdash; 1994-05, 
+  between Mosaic’s all over the world using the CCI and the reliable Multicast 
+  Protocol (RMP) library. </LI></UL>International Business Machines: 1/92-5/94, 
 <I>Networking Systems division</I>, Research Triangle Park, NC 
 <UL>
   <LI>Contributed to <A 
-  href="https://www.edn.com/electronics-news/4340010/Alcatel-Subsidiary-To-Acquire-IBM-s-CallPath-Technology">CallPath</A> 
+  href="http://www-3.ibm.com/software/speech/enterprise/ep_6.html">CallPath</A> 
   Server digital telephony software for AIX and OS/2. 
   <LI>Designed and implemented OS/2 based CASE system for automated System 
-    Testing. </LI></UL>
-
-<h4><a name="tech-writer">Technical Writer</a></h4>
-
-<p>Published Books with McGraw-Hill Professional</p>
-
-<ul>
-
-<li><a href="https://www.mhprofessional.com/9780071804288-usa-hudson-continuous-integration-in-practice-group">Hudson
-Continuous Integration in Practice</a>.  Published: September 4th 2013
-  ISBN: 9780071804288 <br />
-
-My most recent book is a practical guide to implementing continuous
-integration using Hudson, one of the pioneering tools in the field.
-
-</li>
-
-<li><a href="https://www.mhprofessional.com/javaserver-faces-2-0-the-complete-reference">JavaServer
-Faces 2.0, The Complete Reference</a>.  Published: November 2nd 2009
-  ISBN: 9780071625104  <br />
-
-JSF 2.0 was a blockbuster release and introduced a large number of new
-and powerful features.  This book was much more than an update of the
-first edition.  More than two thirds of the content was brand new,
-documenting all of the new features.
-
-</li>
-
-<li><a href="https://www.mhprofessional.com/9780071490832-usa-secrets-of-the-rock-star-programmers-riding-the-it-crest">Secrets
-of the Rock Star Programmers: Riding the IT Crest</a>.  Published:
-  February 21st 2008 ISBN: 9780071490832 <br />
-
-This book is a collection of incisive interviews I conducted with some
-of the top practicing programmers of the day.  I tried to discover and
-share the secrets of their professional success in technical, business,
-career, and personal domains.  I continue to evolve this idea
-as <a href="devrel.html">a lecture</a>, including new interviews with an
-expanding cadre of contemporary rock star programmers.
-
-</li>
-
-<li><a href="https://www.mhprofessional.com/9780071710480-usa-javaserver-faces-the-complete-reference">JavaServer
-Faces: The Complete Reference</a>.  Published: August 25th 2006, ISBN:
-  9780071710480 <br />
-
-My first book, at over 800 printed pages, is true to its title.  It
-introduces JSF and provides a complete reference to all of its
-capabilities.
-  
-</li>
-
-</ul>
-
-<p>Technical Blog</p>
-
-<ul>
-
-<li><a href="http://ridingthecrest.com/blog/">http://ridingthecrest.com/blog/</a> <br />
-
-Starting in 2004, My blog covers topics of interest to the practicing
-programmer, mostly in Java, but also with higher level topics such as
-REST, architecture, and industry analysis.
-  
-</li>
-
-</ul>
-
-<h4><a name="devrel">Trainer and Developer Relations</a></h4>
-
-
+  Testing. </LI></UL>
 <H3><STRONG>EDUCATION</STRONG></H3>
 <P>University of Illinois at Urbana-Champaign, College of Engineering Co-Op 
 program, Computer Science Curriculum. Bachelor of Science in Computer Science 
 with International minor in Germanic Studies, emphasis on computer music. 
-<B>Degree Date: Spring 1995</B>. GPA: 4.3/5.0 
+<B>Degree Date: Spring 95</B>. GPA: 4.3/5.0 
 <H3><STRONG>PROGRAMMING LANGUAGES; TOOLS; RELATED COURSES</STRONG></H3>
 
 <P>Java, AJAX, SOA, JNI, C++, C, Perl, UML, XSL, XML, SOAP, J2EE,
@@ -244,8 +134,9 @@ Cynthia Kay
 href="mailto:ckay@ingenuity.com?Subject=Reference for Ed Burns">ckay@ingenuity.com</A>&gt;, VP of Engineering, Ingenuity, Inc. </br>
 <HR>
 
-<P><!-- hhmts start -->Created: 13 August 1995 Last modified: 23 June 2018 <!-- hhmts end --></P>
-<ADDRESS>The Resum&eacute; of Ed Burns / <A 
+<P><!-- hhmts start -->Last modified: Wed 22 March 22:07:51 Pacific Standard Time 
+2006 <!-- hhmts end --></P>
+<ADDRESS>The Resumé of Ed Burns / <A 
 href="mailto:edburns@acm.org">edburns@acm.org</A> </ADDRESS>
 
 
