https://github.com/edburns/edburns.github.io/issues/1
Complete draft of overall resume.

--- a/edburns/resume/developer.html
+++ b/edburns/resume/developer.html
@@ -59,7 +59,7 @@ application of software engineering practices.<BR></P>
 <p>09/01 - 05/04, <I>Staff Engineer</I>, Santa Clara, CA </p>
 
   <LI>Team leader for <A
-  href="http://java.sun.com/javaee/javaserverfaces/">JavaServer Faces web
+  href="https://www.oracle.com/technetwork/java/javaee/javaserverfaces-139869.html">JavaServer Faces web
   application framework</A> since early days of project. Leveraged
   extreme programming concepts to lead a three person team in tackling
   an ambitious, highly visible, project on an aggressive schedule.
@@ -127,17 +127,15 @@ driven development; Software Engineering, Operating Systems, Distributed
 Networks, Sun Certified Java 2 Architect</P>
 
 <H3><STRONG>REFERENCES</STRONG></H3>
-Craig McClanahan &lt;<a href="mailto:craig.mcclanahan@sun.com">craig.mcclanahan@sun.com</a>&gt;, Web tools Architect<br />
-George Drapeau &lt;<A HREF="mailto:george.drapeau@sun.com">george.drapeau@sun.com</A>&gt;, Engineering Manager, Sun Microsystems<br />
-Cynthia Kay 
-&lt;<A 
-href="mailto:ckay@ingenuity.com?Subject=Reference for Ed Burns">ckay@ingenuity.com</A>&gt;, VP of Engineering, Ingenuity, Inc. </br>
-<HR>
+<p><a href="https://www.crunchbase.com/person/alan-braverman">Alan Braverman</a></p>
+<p><a href="https://www.linkedin.com/in/doug-beeferman-671131/">Doug Beeferman</a></p>
+<p><a href="https://www.linkedin.com/in/jamesgosling/">James Gosling</a></p>
 
-<P><!-- hhmts start -->Last modified: Wed 22 March 22:07:51 Pacific Standard Time 
-2006 <!-- hhmts end --></P>
-<ADDRESS>The Resumé of Ed Burns / <A 
-href="mailto:edburns@acm.org">edburns@acm.org</A> </ADDRESS>
+
+<P><HR>
+<address>Ed Burns &lt;<A HREF="mailto:edburns@acm.org">edburns@acm.org</A>&gt;</address>
+Created: 13 August 1995 Last Modified: 11 October 2018 <BR>
+</P>
 
 
 <script type="text/javascript">
