--- a/edburns/resume/index.html
+++ b/edburns/resume/index.html
@@ -40,18 +40,20 @@ application of software engineering practices.<BR></P>
 <H3><STRONG>EXPERIENCE</STRONG></H3>
 
 <p>I have developed my career with proven distinctions in three related
-core competencies: <a href="developer.html">software
-development</a>, <a href="tech-writer.html">technical writing</a>, and
-<a href="devrel.html">training/developer relations</a>.</p>
+core competencies: <a href="#developer">software
+development</a>, <a href="#tech-writer">technical writer</a>, and
+<a href="#devrel">training/developer relations</a>.</p>
 
 <h4><a name="developer">Software Development</a></h4>
 
-<P>Oracle America, Inc.: </p> 
+<P>Oracle America, Inc.</p> 
 <UL>
 
-<p>2017-09 &mdash; present, <I>Consulting Member of the Technical Staff</I>, Santa Clara, CA </p>
+<p>2017-06 &mdash; present, <I>Consulting Member of the Technical Staff</I>, Santa Clara, CA </p>
 
 <p>Cloud Collections State Service</p>
+
+<ul>
 
 <li>Team member working on upcoming addition to Oracle's public cloud:
 tentatively called Cloud Collections State Service.  This technology
@@ -61,52 +63,114 @@ and has gRPC enabled language bindings for Go, Java, JavaScript, Python
   and Swift.</li>
 
 <li>On the Cloud Collections team, I work in development on the Java,
-JavaScript, and Go clients and also as a technical writer.</li>
+  JavaScript, and Go clients and also as a technical writer.</li>
+
+</ul>
+
+<p>2016-07 &mdash; 2017-05, <I>Consulting Member of the Technical Staff</I>, Santa Clara, CA </p>
+
+<p>Etcd on Oracle Coherence</p>
+
+<ul>
+  
+<li>I worked on a project to build an Etcd implementation on top of
+Oracle Coherence, a high performance distributed key/value store.</li>
+
+</ul>
 
 <p>Jakarta EE</p>
 
+<ul>
+  
 <li>Help to transition JavaServer Faces (JSF) to the Eclipse Foundation
   for continued evolution by the community.</li>
 
 <li>Mentor Beijing team responsible for continued maintenance of
-Oracle's JSF implementation before and after transition to Eclipse.</li>
-  
+  Oracle's JSF implementation before and after transition to Eclipse.</li>
 
-<p>2010-08 &mdash; 2017-08, <I>Consulting Member of the Technical Staff</I>, Santa Clara, CA </p>
+</ul>
+
+<p>2015-09 &mdash; 2016-06, <I>Consulting Member of the Technical Staff</I>, Santa Clara, CA </p>
+
+<p>Microservices Development Project</p>
+
+<ul>
+  
+<li>At the dawn of the microservices boom, I worked on a project to
+create a successor to Java EE for the microservices world.  This service
+would be Java powered, Docker based, and cloud ready.  It was built on
+Apache Mesos/Marathon and featured support for many microservices best
+practices, including: blue-green deployments, canary testing, circuit
+breakers, service regiestires, and API discovery.</li>
+
+</ul>
+
+<p>2013-06 &mdash; 2015-08, <I>Consulting Member of the Technical Staff</I>, Santa Clara, CA </p>
 
 <p>Java EE 8</p>
 
-<li>Co-Specification Lead for Java Servlet 4.0 Specification</li>
+<ul>
+  
+<li>Co-Specification Lead for <a href="https://jcp.org/en/jsr/detail?id=369">Java Servlet 4.0</a></li>
 
-<li>Co-Specification Lead for JSF 2.3 Specification</li>
+<li>Co-Specification Lead for <a href="https://jcp.org/en/jsr/detail?id=372">JSF 2.3</a></li>
+
+</ul>
+
+<p>2010-08 &mdash; 2013-05, <I>Consulting Member of the Technical Staff</I>, Santa Clara, CA </p>
 
 <p>Java EE 7</p>
 
-<li>Co-Specification Lead for JSF 2.2 Specification</li>
+<ul>
+  
+<li>Co-Specification Lead for <a href="https://jcp.org/en/jsr/detail?id=344">JSF 2.2</a></li>
+
+</ul>
 
 </UL>
 
-<P>Sun Microsystems, Inc.: </p> 
+<P>Sun Microsystems, Inc.</p> 
 <UL>
 
-<p>2002-10 &mdash; 2010-07, <I>Senior Staff Engineer</I>, Santa Clara, CA </p>
+  <p>2002-10 &mdash; 2010-07, <I>Senior Staff Engineer</I>, Santa Clara, CA </p>
+
+  <p>Java EE 6</p>
+
+<ul>
+  
+  <li>Specification lead
+  for <a href="https://jcp.org/en/jsr/detail?id=314">JSF 2.0</a>.</li>
+  
+  <li>Was instrumental in promoting JSF by writing books, teaching
+  classes and giving frequent conference presentations.</li>
 
   <li>Help lead a team of industry experts from leading companies such
   as IBM, BEA, Sun, and Oracle in developing the specification for <a
   href="http://www.jcp.org/jsr/detail/252.jsp">JSF</a>.</li>
 
-  <li>Pioneered patented techniques for using JSF and AJAX together.</li>
+  <li>Pioneered and patented techniques for using JSF and AJAX together
+  (<a href="https://patents.google.com/patent/US8533291">US 8,533,291
+  B1</a>, <a href="https://patents.google.com/patent/US7788341B1">US 7,788,341 B1</a>).</li>
+
+  </ul>
+
 
 <p>2001-09 &mdash; 2002-09, <I>Staff Engineer</I>, Santa Clara, CA </p>
 
-  <LI>Team leader for <A
-  href="http://java.sun.com/javaee/javaserverfaces/">JSF web
-  application framework</A> since early days of project. Leveraged
+<ul>
+  
+  <LI>Team leader
+  for <A href="https://www.oracle.com/technetwork/java/javaee/javaserverfaces-139869.html">JSF
+  web application framework</A> since early days of project. Leveraged
   extreme programming concepts to lead a three person team in tackling
   an ambitious, highly visible, project on an aggressive schedule.
 
+</ul>
+
 <p>1997-01 &mdash; 2001-08,  <I>Staff Engineer</I>, Santa Clara, CA</p>
 
+<ul>
+  
   <LI>Lead engineer for <A href="http://www.mozilla.org/oji/">Java 
   integration</A> in the Netscape 6 web browser. Netscape 6 is several million 
   lines of <A href="http://www.mozilla.org/hacking/">open source code</A>. 
@@ -121,10 +185,19 @@ Oracle's JSF implementation before and after transition to Eclipse.</li>
   gather software requirements. Utilized XML, XSL and servlet technologies to 
   provide a web front end. 
   <LI>Lead engineer for front end of 100% Pure Java multi-dimensional 
-  spreadsheet application. </LI></UL>
+    spreadsheet application. </LI>
+
+</ul>
+
+</UL>
+
 <P>Silicon Graphics: 1995-06 &mdash; 1997-01, <I>Core Engineer for Web Authoring Tool</I>, 
 Mountain View, CA 
-<UL>
+  <UL>
+
+<ul>
+  
+    
   <LI>Collaborated on a self-started two person team to design, implement and 
   maintain a C++ web transport library. Drove the library from inception through 
   two major releases. This library provides the foundation for SGI's web 
@@ -132,10 +205,20 @@ Mountain View, CA
   <LI>Integrated the web transport library into <A 
   href="http://www.sgi.com/software/cosmo/create.html">CosmoCreate</A> to enable 
   viewing and authoring pages over the web. This provided experience in 
-  extending legacy code well past initial requirements. </LI></UL>National Center 
-for Supercomputing Applications: 1994-08 &mdash; 1995-06, <I>Developer for Mosaic for X</I>, 
-Champaign, IL 
-<UL>
+    extending legacy code well past initial requirements. </LI>
+
+</ul>
+  
+</UL>
+
+
+National Center for Supercomputing Applications: 1994-08 &mdash;
+  1995-06, <I>Developer for Mosaic for X</I>, Champaign, IL
+
+  <UL>
+
+<ul>
+  
   <LI>Implemented enabling features for browsing and posting to the Common 
   Client Interface (<A 
   href="http://www.ncsa.uiuc.edu/SDG/Software/XMosaic/CCI/cci-spec.html">CCI</A>) 
@@ -146,14 +229,32 @@ Champaign, IL
   href="http://archive.ncsa.uiuc.edu/SDG/Software/XMosaic/CCI/webcast.html">WebCast</A>, 
   a collaborative muticast (MBONE) program that enables sharing of web pages 
   between Mosaic's all over the world using the CCI and the reliable Multicast 
-  Protocol (RMP) library. </LI></UL>International Business Machines: 1992-01 &mdash; 1994-05, 
+    Protocol (RMP) library. </LI>
+
+  </ul>
+
+</UL>
+
+International Business Machines: 1992-01 &mdash; 1994-05, 
 <I>Networking Systems division</I>, Research Triangle Park, NC 
+
+
 <UL>
+
+  <ul>
+  
+
   <LI>Contributed to <A 
   href="https://www.edn.com/electronics-news/4340010/Alcatel-Subsidiary-To-Acquire-IBM-s-CallPath-Technology">CallPath</A> 
   Server digital telephony software for AIX and OS/2. 
   <LI>Designed and implemented OS/2 based CASE system for automated System 
-    Testing. </LI></UL>
+    Testing. </LI>
+
+</ul>
+
+  
+
+  </UL>
 
 <h4><a name="tech-writer">Technical Writer</a></h4>
 
@@ -170,7 +271,7 @@ integration using Hudson, one of the pioneering tools in the field.
 
 </li>
 
-<li><a href="https://www.mhprofessional.com/javaserver-faces-2-0-the-complete-reference">JavaServer
+<li><a href="https://www.mhprofessional.com/9780071625098-usa-javaserver-faces-20-the-complete-reference-group">JavaServer
 Faces 2.0, The Complete Reference</a>.  Published: November 2nd 2009
   ISBN: 9780071625104  <br />
 
@@ -194,7 +295,7 @@ expanding cadre of contemporary rock star programmers.
 
 </li>
 
-<li><a href="https://www.mhprofessional.com/9780071710480-usa-javaserver-faces-the-complete-reference">JavaServer
+<li><a href="https://www.mhprofessional.com/9780072262407-usa-javaserver-faces-the-complete-reference-group">JavaServer
 Faces: The Complete Reference</a>.  Published: August 25th 2006, ISBN:
   9780071710480 <br />
 
@@ -222,6 +323,15 @@ REST, architecture, and industry analysis.
 
 <h4><a name="devrel">Trainer and Developer Relations</a></h4>
 
+<p>I have over thirteen years of extensive international conference
+speaking and training experience, having developed and delivered a broad
+range of conference sessions and full day training workshops on a wide
+array of software topics.  I started with sessions and trainings on JSF
+and J2EE in 2005 and continue in the present day with Docker,
+  Kubernetes, and cloud technologies.</p>
+
+<p>A complete list of my sessions and training is at &lt;<a href="http://purl.oclc.org/NET/edburns/speaking-engagements/">http://purl.oclc.org/NET/edburns/speaking-engagements/</a>&gt;</p>
+
 
 <H3><STRONG>EDUCATION</STRONG></H3>
 <P>University of Illinois at Urbana-Champaign, College of Engineering Co-Op 
@@ -230,21 +340,22 @@ with International minor in Germanic Studies, emphasis on computer music.
 <B>Degree Date: Spring 1995</B>. GPA: 4.3/5.0 
 <H3><STRONG>PROGRAMMING LANGUAGES; TOOLS; RELATED COURSES</STRONG></H3>
 
-<P>Java, AJAX, SOA, JNI, C++, C, Perl, UML, XSL, XML, SOAP, J2EE,
-Struts, CSS, HTML, CGI, SQL, JavaScript, Objective C, Fortran, Assembly,
+<P>Java, Java EE, HTTP/2, Go, Python, Swift, Kubernetes, Helm, Docker,
+Etcd, Redis, Ansible, Mesos/Maraton, AJAX, SOA, JNI, C++, C, Perl, UML,
+XSL, XML, SOAP, J2EE, Struts, CSS, HTML, CGI, Fortify, Git, Mercurial,
+svn, SQL, JavaScript, NodeJS, JAX/RS, Continuous Integration
+(Jenkins/GitLab), JSON, swagger/OpenAPI, Objective C, Fortran, Assembly,
 LISP, Rexx; COM, Emacs, Purify, gdb, dbx, performance analyzers, test
 driven development; Software Engineering, Operating Systems, Distributed
 Networks, Sun Certified Java 2 Architect</P>
 
 <H3><STRONG>REFERENCES</STRONG></H3>
-Craig McClanahan &lt;<a href="mailto:craig.mcclanahan@sun.com">craig.mcclanahan@sun.com</a>&gt;, Web tools Architect<br />
-George Drapeau &lt;<A HREF="mailto:george.drapeau@sun.com">george.drapeau@sun.com</A>&gt;, Engineering Manager, Sun Microsystems<br />
-Cynthia Kay 
-&lt;<A 
-href="mailto:ckay@ingenuity.com?Subject=Reference for Ed Burns">ckay@ingenuity.com</A>&gt;, VP of Engineering, Ingenuity, Inc. </br>
-<HR>
+<p><a href="https://www.crunchbase.com/person/alan-braverman">Alan Braverman</a></p>
+<p><a href="https://www.linkedin.com/in/doug-beeferman-671131/">Doug Beeferman</a></p>
+<p><a href="https://www.linkedin.com/in/jamesgosling/">James Gosling</a></p>
 
-<P><!-- hhmts start -->Created: 13 August 1995 Last modified: 23 June 2018 <!-- hhmts end --></P>
+
+<P><!-- hhmts start -->Created: 13 August 1995 Last modified: 11 October 2018 <!-- hhmts end --></P>
 <ADDRESS>The Resum&eacute; of Ed Burns / <A 
 href="mailto:edburns@acm.org">edburns@acm.org</A> </ADDRESS>
 
