--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,6 +31,50 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
+  <th rowspan="4"><span class="verticaltext">2018</span></th>
+
+<tr>
+
+<td>JavaLand</td> 
+
+<td>Br&uuml;hl, Germany</td>
+
+<td>March
+</td>
+
+<td><a href="https://programm.javaland.eu/2018/#/scheduledEvent/547960">Cloud Perspective: Kubernetes is like an App Server, but More Cloudy</a>, <a href="https://www.youtube.com/watch?v=2glfVNJmtAs">JUG Interview</a></td>
+
+</tr>
+  
+
+<tr>
+
+<td>Devnexus</td> 
+
+<td>Atlanta, U.S.A.</td>
+
+<td>February
+</td>
+
+<td>Panel with Java Experts, Building a Serverless State Service for the Cloud with Java 9</a></td>
+
+</tr>
+
+<tr>
+
+<td>Campus Party Brzil</td> 
+
+<td>São Paulo, Brazil</td>
+
+<td>January
+</td>
+
+<td>Secrets of the Above Average Programmers, Career Panel, Java EE 8 SouJAVA JUG meeting</a></td>
+
+</tr>
+
+<tr>
+
 <th rowspan="8"><span class="verticaltext">2017</span></th>
 
 <td><a href="https://www.codeeurope.pl/en/speakers/edward-burns">Code Europe</a></td> 
@@ -40,7 +84,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 <td>December
 </td>
 
-<td><a href="">Secrets of the Above Average Programmers</a>, <a href="">Building a Serverless State Service for the Cloud</a></td>
+<td><a href="https://www.youtube.com/watch?v=x8s273TS_60">Secrets of the Above Average Programmers</a>, Building a Serverless State Service for the Cloud</td>
 
 </tr>
 
@@ -1300,7 +1344,7 @@ Session: Intro to JSF
     <address><a href="mailto:edburns@@acm.org"></a></address>
 <!-- Created: Mon Aug 22 09:32:52 Eastern Daylight Time 2005 -->
 <!-- hhmts start -->
-Last modified: Sun Oct 16 17:24:37 EDT 2016
+Last modified: 11 October 2018
 <!-- hhmts end -->
   </body>
 </html>
