https://github.com/edburns/edburns.github.io/issues/1
Export ODT

--- a/edburns/resume/index.html
+++ b/edburns/resume/index.html
@@ -27,7 +27,7 @@ type=text/css></LINK>
 <ADDRESS><A href="mailto:edburns@acm.org">edburns@acm.org</A> 
 <BR>URL: &lt;<A 
 href="http://purl.oclc.org/NET/edburns/resume">http://purl.oclc.org/NET/edburns/resume</A>&gt; 
-<a href="edburns.pdf">PDF</a>, <A href="edburns.doc">MSWord</A>, <A href="edburns.sxw">Star Office</A> and <A href="edburns.txt">ASCII</A> format 
+<a href="edburns.pdf">PDF</a>, <A href="edburns.doc">MSWord</A>, <A href="edburns.odt">Libre/Open/Star Office</A> and <A href="edburns.txt">ASCII</A> format 
 available</ADDRESS>
 <ADDRESS><A href="address.html">Address 
 information</A></ADDRESS>
