End of present chapter.

--- a/edburns/resume/index.html
+++ b/edburns/resume/index.html
@@ -49,7 +49,7 @@ development</a>, <a href="#tech-writer">technical writer</a>, and
 <P>Oracle America, Inc.</p> 
 <UL>
 
-<p>2017-06 &mdash; present, <I>Consulting Member of the Technical Staff</I>, Santa Clara, CA </p>
+<p>2017-06 &mdash; 2018-12, <I>Consulting Member of the Technical Staff</I>, Santa Clara, CA </p>
 
 <p>Cloud Collections State Service</p>
 
